# ppmd-cffi

./: .gitignore  .travis.yml  Changelog.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cibuildwheel.yml  codeql-analysis.yml  manylinux_build.yml  publish-manylinux-to-pypi.yml  publish-source-to-pypi.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish-wheels-to-pypi.yml  run-docs-test.yml  run-tox-tests.yml
ci/: build-manylinux-wheels.sh
docs/: authors.rst  conf.py  contribution.rst  index.rst  user_guide.rst
src/: Ppmd7Dec.c  ffi_build.py
src/ext/: 7zTypes.h  CpuArch.h  Ppmd.h  Ppmd7.c  Ppmd7Dec.c  Ppmd7Enc.c  Ppmd8.c  Ppmd8Dec.c  Ppmd8Enc.c  PpmdArch.h  PpmdPy.h
src/ppmd/: __init__.py  __init__.pyi  __main__.py  archive.py  ffi_build.py
tests/: test_cli.py  test_ppmd.py  test_ppmd7.py  test_ppmd7_fuzzer.py  test_ppmd8.py
tests/data/: data.ppmd
tools/: make_runner.sh  pytest_runner.cpp  run_gdb.sh
