[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.5.0"]
build-backend = "setuptools.build_meta"

[tools.setuptools_scm]
local_scheme = "no-local-version"

[tool.coverage.run]
branch = true
parallel = true
source = ["ppmd"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["if __name__ == .__main__.:", "pragma: no-cover", "@abstract", "def __repr__"]

[tool.isort]
known_first_party = ["ppmd", "_ppmd"]
known_third_party = ["docutils", "flake8", "pyannotate_runtime", "pytest", "pytz", "setuptools", "sphinx", "yaml"]
line_length = 125

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
strict_optional = true
show_column_numbers = true
files = "*.py"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test*.py"
norecursedirs = [".git", "_build", "tmp", ".eggs"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = check, py{36,37,38,39}, pypy3, docs, mypy

[testenv]
passenv = TRAVIS TRAVIS_* APPVEYOR APPVEYOR_* GITHUB_* PYTEST_ADDOPTS
extras = test
commands =
    python -m pytest -vv -s

[testenv:mypy]
basepython = python3.8
extras = check
commands = mypy src tests

[testenv:check]
basepython = python3.8
extras = check
ignore_errors=true
commands =
    check-manifest {toxinidir}
    flake8 src tests setup.py
    isort --quiet --check-only --diff src/ppmd/*.py tests setup.py

[testenv:docs]
basepython = python3.8
extras = docs
commands =
    sphinx-build {posargs:-E} -b html docs html

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38, check, mypy
    3.9: py39
    pypy3: pypy3
"""
