[flake8]
max-line-length = 125

[bdist_wheel]
universal = 0

[metadata]
name = ppmd-cffi
description = ppmd cffi binding library
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = ppmd
license = LGPL-2.1+
author = Hiroshi Miura
author_email = miurahr@linux.com
url = http://github.com/miurahr/ppmd-cffi
classifiers =
      Development Status :: 2 - Pre Alpha
      License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3 :: Only
      Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
      cffi>=1.0.0
setup_requires =
      cffi>=1.0.0
      setuptools-scm>=3.5.0
      setuptools>=42.0
      wheel
      pep517
packages = ppmd


[options.extras_require]
test = pytest
