[flake8]
max-line-length = 125

[bdist_wheel]
universal = 0

[metadata]
name = ppmd-cffi
description = PPMd compression/decompression library
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = ppmd, 7-zip, compression
license = LGPL-2.1+
author = Hiroshi Miura
author_email = miurahr@linux.com
url = http://github.com/miurahr/ppmd
classifiers =
      Development Status :: 4 - Beta
      License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3 :: Only
      Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
      cffi>=1.14.0
setup_requires =
      cffi>=1.14.0
      setuptools-scm>=3.5.0
      setuptools>=42.0
package_dir =
    =src
packages = find:
provides = ppmd

[options.packages.find]
where = src

[options.package_data]
ppmd: *.pyi

[options.entry_points]
console_scripts =
    ppmd = ppmd:main

[options.extras_require]
test =
      pytest
      pytest-cov
      hypothesis
      coverage[toml]>=5.2
check =
      mypy>=0.812
      mypy_extensions>=0.4.3
      check-manifest
      flake8
      readme-renderer
      pygments
      isort>=5.0.3
docs =
      sphinx
fuzzer =
      atheris
      hypothesis
